# MatrixCalculator

./: CMakeLists.txt  Calculator.cpp  Calculator.h  Exception.cpp  Exception.h  Fraction.cpp  Fraction.h  InputReader.cpp  InputReader.h  README.md  main.cpp
Matrix/: DenseMatrix.cpp  DenseMatrix.h  Matrix.cpp  Matrix.h  SparseMatrix.cpp  SparseMatrix.h
MatrixOperations/: MatrixOperationManager.cpp  MatrixOperationManager.h
examples/: A.txt  X.txt
src/: Calculator.cpp  Calculator.h  Exception.h  Fraction.cpp  Fraction.h  InputReader.cpp  InputReader.h
src/Matrix/: DenseMatrix.h  SparseMatrix.cpp  SparseMatrix.h
src/MatrixOperations/: MatrixOperationManager.cpp  MatrixOperationManager.h
